--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.DS_Store
-.vscode
-.rpt2_cache
+# MakeCode
+built
 node_modules
-dist
-types
-docs
-npm-debug.log
+yotta_modules
+yotta_targets
+pxt_modules
+_site
+*.db
+*.tgz
+.header.json
+.simstate.json
